# NA-templates

./: .travis.yml  CMakeLists.txt  README.md
10-algos/: 11-algos.cpp  CMakeLists.txt  implementation.cpp  implementation.h
20-type-template/: .21-tests.cpp.swp  .implementation.h.swp  21-tests.cpp  22-invalid.cpp  23-optional.cpp  CMakeLists.txt  implementation.h
30-traits/: 31-tests.cpp  32-interesting.cpp  CMakeLists.txt  implementation.h
40-algos-impl/: 41-find-if.cpp  42-inner-product.cpp  43-vector-erase.cpp  CMakeLists.txt  find_if.h  inner_product.h  vector_erase.h
50-sfinae/: .implementation.h.swp  51-traits.cpp  52-void_t.cpp  CMakeLists.txt  implementation-void_t.h  implementation.h
60-stm/: 61-stm.cpp  CMakeLists.txt  stm.h
